tests/security/taintThroughChildConstructorWhenMethodOverriddenWithParentConstructorCall/output.txt
ERROR: TaintedData - input.hack:20:6 - Detected tainted HTML tags